df-derive/tests/fail/153-fail-flatten-conflicts.stderr
error: field `skipped` combines `skip` with another field attribute; `skip` omits the field entirely, so conversion attributes have no effect; drop one
  --> tests/fail/153-fail-flatten-conflicts.rs:10:26
   |
10 |     #[df_derive(flatten, skip)]
   |                          ^^^^

error: first `flatten` override declared here
  --> tests/fail/153-fail-flatten-conflicts.rs:10:17
   |
10 |     #[df_derive(flatten, skip)]
   |                 ^^^^^^^

error: field `stringified` combines `flatten` with another field attribute; `flatten` splices a nested row schema into the parent, so conversion attributes and `skip` cannot apply at the same time; drop one
  --> tests/fail/153-fail-flatten-conflicts.rs:16:26
   |
16 |     #[df_derive(flatten, as_string)]
   |                          ^^^^^^^^^

error: first `flatten` override declared here
  --> tests/fail/153-fail-flatten-conflicts.rs:16:17
   |
16 |     #[df_derive(flatten, as_string)]
   |                 ^^^^^^^

error: field `binary` combines `flatten` with another field attribute; `flatten` splices a nested row schema into the parent, so conversion attributes and `skip` cannot apply at the same time; drop one
  --> tests/fail/153-fail-flatten-conflicts.rs:22:26
   |
22 |     #[df_derive(flatten, as_binary)]
   |                          ^^^^^^^^^

error: first `flatten` override declared here
  --> tests/fail/153-fail-flatten-conflicts.rs:22:17
   |
22 |     #[df_derive(flatten, as_binary)]
   |                 ^^^^^^^

error: field `decimal` combines `flatten` with another field attribute; `flatten` splices a nested row schema into the parent, so conversion attributes and `skip` cannot apply at the same time; drop one
  --> tests/fail/153-fail-flatten-conflicts.rs:28:26
   |
28 |     #[df_derive(flatten, decimal(precision = 10, scale = 2))]
   |                          ^^^^^^^

error: first `flatten` override declared here
  --> tests/fail/153-fail-flatten-conflicts.rs:28:17
   |
28 |     #[df_derive(flatten, decimal(precision = 10, scale = 2))]
   |                 ^^^^^^^

error: field `time` combines `flatten` with another field attribute; `flatten` splices a nested row schema into the parent, so conversion attributes and `skip` cannot apply at the same time; drop one
  --> tests/fail/153-fail-flatten-conflicts.rs:34:26
   |
34 |     #[df_derive(flatten, time_unit = "ns")]
   |                          ^^^^^^^^^

error: first `flatten` override declared here
  --> tests/fail/153-fail-flatten-conflicts.rs:34:17
   |
34 |     #[df_derive(flatten, time_unit = "ns")]
   |                 ^^^^^^^
